resolved WAVE contrast error for red/green values of Card

--- a/react_client/src/components/card/styles/card.css
+++ b/react_client/src/components/card/styles/card.css
@@ -105,3 +105,11 @@
   transform: scale(1.05);
   transition: transform 0.5s ease-in-out;
 }
+
+.card-text.positive {
+  color: rgb(5, 152, 5);
+}
+
+.card-text.negative {
+  color: red;
+}
